src/test/deca/context/valid/class/7_declMethodVide.deca
/* Description:
     tester class qui possede de method vide

    Historique:
      cree le 08/01/2020
*/

   class A {

    int getX (){
    
    }


   }
