src/test/deca/context/invalid/class/33_methodes.deca
// Description:
//    tester deux méthode avec le meme nom
//


class A {
	void m(int a) {

	}
	void m() {

	}
}

{

}
